# cli/internal/gen/api/swagger.json
@@ -1,1 +1,103 @@
-{"info":{"title":"PierceFlare","version":"v0.vike-prod","description":"All requests require an authentication token generated by the Pierceflare server, associated with a DDNS domain."},"openapi":"3.1.0","components":{"schemas":{},"parameters":{}},"paths":{"/api/infos":{"get":{"description":"Gives back to requester its associated domain.","responses":{"200":{"description":"Domain associated with CLI Token","content":{"text/plain":{"schema":{"type":"string"},"example":"whatever.pierceflare.com"}}}}}},"/api/flare":{"put":{"description":"Allows to notify the server that your IP address changed, so that Cloudflare's DDNS entry definition can change accordingly.","responses":{"200":{"description":"When flare request has been successfully acknoledged","content":{"text/plain":{"schema":{"type":"string","enum":["OK"]}}}},"500":{"description":"Remote IP of flare emitter is unresolvable.","content":{"application/json":{"schema":{"type":"object","properties":{"code":{"type":"string","enum":["UNRESOLVABLE"]},"message":{"type":"string"}},"required":["code","message"]}}}}}}}}}
+{
+  "info": {
+    "title": "PierceFlare",
+    "version": "v0.vike-prod",
+    "description": "All requests require an authentication token generated by the Pierceflare server, associated with a DDNS domain."
+  },
+  "openapi": "3.0.0",
+  "components": {
+    "schemas": {
+      "RemoteOperation": {
+        "type": "string",
+        "enum": [
+          "batch",
+          "dummy"
+        ]
+      },
+      "ErrCode": {
+        "type": "string",
+        "enum": [
+          "UNRESOLVABLE"
+        ]
+      }
+    },
+    "parameters": {}
+  },
+  "paths": {
+    "/api/infos": {
+      "get": {
+        "description": "Gives back to requester its associated domain.",
+        "responses": {
+          "200": {
+            "description": "Domain associated with CLI Token",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "whatever.pierceflare.com"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/flare": {
+      "put": {
+        "description": "Allows to notify the server that your IP address changed, so that Cloudflare's DDNS entry definition can change accordingly.",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "ip": {
+                    "type": "string",
+                    "format": "ip"
+                  },
+                  "dummy": {
+                    "type": "boolean"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "When flare request has been successfully acknoledged",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/RemoteOperation"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Remote IP of flare emitter is unresolvable.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "errCode": {
+                      "$ref": "#/components/schemas/ErrCode"
+                    },
+                    "message": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "errCode",
+                    "message"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
